# Alice-Engine

./: .gitignore  README.md  pyproject.toml
example/: example-script.as
src/: logger.py  runner.py
src/parser/: pretreatment.py  script_parser.py  tokenizer.py
src/parser/alice_types/: test.py  token_types.py  tree_types.py
